force-app/main/default/objects/RMS_Sold_To__c/RMS_Sold_To__c.object-meta.xml
<CustomObject>
    <description>批发商下的经销商，即RMS的客户</description>
    <label>RMS Sold To</label>
    <nameField>
        <label>Sold To Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMS Sold To List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>