force-app/main/default/objects/RMS_Sold_To__c/fields/Account_Big_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Big_Region__c</fullName>
    <description>Account Big Region</description>
    <label>Account Big Region</label>
    <length>80</length>
    <type>Text</type>
</CustomField>