force-app/main/default/objects/RMS_Sold_To__c/fields/Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>关联批发商Wholesale</description>
    <label>Account Group</label>
    <referenceTo>RMS_Account_Group__c</referenceTo>
    <relationshipLabel>RMS Sold To</relationshipLabel>
    <relationshipName>RMS_Sold_To</relationshipName>
    <type>Lookup</type>
</CustomField>