force-app/main/default/objects/RMS_Sold_To__c/fields/Account_Org__c.field-meta.xml
<CustomField>
    <fullName>Account_Org__c</fullName>
    <description>Account Org</description>
    <label>Account Org</label>
    <length>80</length>
    <type>Text</type>
</CustomField>