force-app/main/default/objects/RMS_Sold_To__c/fields/Contact_Pr__c.field-meta.xml
<CustomField>
    <fullName>Contact_Pr__c</fullName>
    <description>联系人</description>
    <label>Contact Pr</label>
    <length>100</length>
    <type>Text</type>
</CustomField>