force-app/main/default/objects/RMS_Sold_To__c/fields/Contact_Tel1__c.field-meta.xml
<CustomField>
    <fullName>Contact_Tel1__c</fullName>
    <label>Contact Tel1</label>
    <type>Phone</type>
</CustomField>