force-app/main/default/objects/RMS_Sold_To__c/fields/Contact_Tel2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Tel2__c</fullName>
    <label>Contact Tel2</label>
    <type>Phone</type>
</CustomField>