force-app/main/default/objects/RMS_Sold_To__c/fields/Contact_Tel__c.field-meta.xml
<CustomField>
    <fullName>Contact_Tel__c</fullName>
    <description>联系电话</description>
    <label>Contact Tel</label>
    <type>Phone</type>
</CustomField>