force-app/main/default/objects/RMS_Sold_To__c/fields/Cust_Channel__c.field-meta.xml
<CustomField>
    <fullName>Cust_Channel__c</fullName>
    <description>cust channel</description>
    <label>Cust Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>FOS</fullName>
            </value>
            <value>
                <fullName>Kids</fullName>
            </value>
            <value>
                <fullName>Openline</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Wholesale.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>