force-app/main/default/objects/RMS_Sold_To__c/fields/Dely_Addr__c.field-meta.xml
<CustomField>
    <fullName>Dely_Addr__c</fullName>
    <description>提货地址</description>
    <label>Dely Addr</label>
    <length>100</length>
    <type>Text</type>
</CustomField>