force-app/main/default/objects/RMS_Sold_To__c/fields/Direct_Partner__c.field-meta.xml
<CustomField>
    <fullName>Direct_Partner__c</fullName>
    <description>直营加盟</description>
    <label>Direct Partner</label>
    <length>40</length>
    <type>Text</type>
</CustomField>