force-app/main/default/objects/RMS_Sold_To__c/fields/New_Group__c.field-meta.xml
<CustomField>
    <fullName>New_Group__c</fullName>
    <label>New Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>