force-app/main/default/objects/RMS_Sold_To__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>BLANKVALUE(Owner:Queue.QueueName, Owner:User.LastName + &quot; &quot; + Owner:User.FirstName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>