force-app/main/default/objects/RMS_Sold_To__c/fields/SAP_Addr__c.field-meta.xml
<CustomField>
    <fullName>SAP_Addr__c</fullName>
    <label>SAP Addr</label>
    <length>100</length>
    <type>Text</type>
</CustomField>