force-app/main/default/objects/RMS_Sold_To__c/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <description>Trading Term(SAP Code)</description>
    <inlineHelpText>Trading Term(SAP Code)</inlineHelpText>
    <label>SAP Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>