force-app/main/default/objects/RMS_Sold_To__c/fields/SAP_Email__c.field-meta.xml
<CustomField>
    <fullName>SAP_Email__c</fullName>
    <label>SAP Email</label>
    <type>Email</type>
</CustomField>