force-app/main/default/objects/RMS_Sold_To__c/fields/SAP_Tel__c.field-meta.xml
<CustomField>
    <fullName>SAP_Tel__c</fullName>
    <label>SAP Tel</label>
    <type>Phone</type>
</CustomField>