force-app/main/default/objects/RMS_Sold_To__c/fields/Sold_To_Name_CN__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Name_CN__c</fullName>
    <description>客户名(中文)</description>
    <label>Sold To Name(CN)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>