force-app/main/default/objects/RMS_Sold_To__c/fields/Sold_To_Name_EN__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Name_EN__c</fullName>
    <description>Sold-to名称(英文)</description>
    <label>Sold To Name(EN)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>