force-app/main/default/objects/RMS_Sold_To__c/fields/TT_APP_ACC__c.field-meta.xml
<CustomField>
    <fullName>TT_APP_ACC__c</fullName>
    <description>Trading Term(APP/ ACC)</description>
    <inlineHelpText>Trading Term(APP/ ACC)</inlineHelpText>
    <label>TT(APP/ ACC)</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>