force-app/main/default/objects/RMS_Sold_To__c/fields/TT_Kids__c.field-meta.xml
<CustomField>
    <fullName>TT_Kids__c</fullName>
    <description>Trading Term(Kids)</description>
    <inlineHelpText>Trading Term(Kids)</inlineHelpText>
    <label>TT(Kids)</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>