force-app/main/default/objects/RMS_Sold_To__c/recordTypes/Normal.recordType-meta.xml
<RecordType>
    <fullName>Normal</fullName>
    <active>true</active>
    <label>Normal</label>
</RecordType>