force-app/main/default/objects/RMS_Sold_To__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Group__c</columns>
    <columns>Sold_To_Name_CN__c</columns>
    <columns>Sold_To_Name_EN__c</columns>
    <columns>Sales_Channel__c</columns>
    <columns>Owner_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>