force-app/main/default/objects/RMS_Sold_To__c/listViews/CFS_Sold_To.listView-meta.xml
<ListView>
    <fullName>CFS_Sold_To</fullName>
    <columns>NAME</columns>
    <columns>Account_Group__c</columns>
    <columns>Sales_Channel__c</columns>
    <columns>Sold_To_Name_CN__c</columns>
    <columns>Sold_To_Name_EN__c</columns>
    <columns>Owner_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Group__c</field>
        <operation>equals</operation>
        <value>00)CC</value>
    </filters>
    <filters>
        <field>Sales_Channel__c</field>
        <operation>equals</operation>
        <value>CFS</value>
    </filters>
    <label>CFS Sold-To</label>
</ListView>