force-app/main/default/objects/RMS_Sold_To__c/listViews/TradeTerm.listView-meta.xml
<ListView>
    <fullName>TradeTerm</fullName>
    <columns>NAME</columns>
    <columns>Account_Group__c</columns>
    <columns>TT_APP_ACC__c</columns>
    <columns>TT_FTW_EG__c</columns>
    <columns>TT_FW_Seasonal__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>contains</operation>
        <value>11510</value>
    </filters>
    <label>Sold-to TradeTerm</label>
    <sharedTo>
        <roleAndSubordinates>RMS_Converse</roleAndSubordinates>
    </sharedTo>
</ListView>